<resources>
    <string name="app_name">Sleep Bet</string>
    <string name="logo">Logo</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here</string>
    <string name="forgot_password">/Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">E-mail Address</string>
    <string name="continue_str">Continue</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="finish">Finish</string>
    <string name="todo">TODO</string>
    <string name="full_name">Full Name</string>
    <string name="create_new_group">Create New Group</string>
    <string name="message_to_group">Message to Group</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="buy_in_amount">Buy in Amount</string>
    <string name="group_name">Group Name</string>
    <string name="group_registration">Group Registration</string>
    <string name="title_activity_information_display">InformationDisplay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
